* **Update:** Removed schedule related fields from Task Dialog when the entity
  type is Asset, Shot or Sequence.
* **Fix:** Replaced "?came_from=" statements with proper "_query()" arguments
  in several templates.
* **New:** Link statuses are now shown in ``view_ticket.jinja2`` if the link is
  a Task derivative.
* **Fix:** Fixed a bug in the sql query in ``views.auth.get_resources()`` view.

0.1.3
=====

* **Update:** Upgraded to `stalker v0.2.3.3`.
* **Fix:** Any TicketLog created for a Ticket is now created with UTC time.
* **Update:** When a Ticket is updated all of the previous commenters will also
  receive emails.
* **New:** Ticket status changes are also emailed to anybody related to the
  particular ticket.

0.1.2
=====

* **Update:** Upgraded to `stalker v0.2.3.2`.
* **Update:** Separated the create/update/review dialog routes for Task, Asset,
  Shot and Sequences.
* **New:** Added utc_to_local() and local_to_utc() functions to
  stalker_pyramid.views module.
* **Fix:** Added ``transaction.abort()`` statements before all return
  statements when the return value
  is a Response instance with a status integer of 500.
* **Update:** Replaced task_dialog_template.jinja2 with dialog_template.jinja2
* **New:** Added Review Task dialog.
* **Fix:** Fixed Create/Update TimeLog dialog by disabling the submit button
  when it is hit once.
* **Update:** GanttChart now shows the status of the task as the background
  color in `percent complete` column.
* **Fix:** When a review request is made for a task, the resulting Ticket is
  created in UTC time.
* **New:** Added `description` field to TimeLog create/update dialog.
* **Update:** Included `dialog_template.jinja2` in `base.jinja2` by default.
* **Update:** TimeLog dialog now only lists tasks with NEW or WIP status.
* **Update:** Replaced the queries inside
  ``stalker_pyramid.views.project.get_project_tasks_today()`` with pure sql
  queries which are ~100x faster.
* **Update:** Replaced the queries inside